  o Add support for 24-bit PCM raw, wav (WAVE_FORMAT_EXTENSIBLE) [FR# 801015],
    au, aiff, & flac files. (robs)
  o Add AIFF-C output support.  (shashimoto)
  o New .ima file format for raw IMA ADPCM.  (robs)
  o Allow the rate and number of channels of .au files to be overridden
    by command-line arguments. (robs@users.sf.net)
  o Add seek support for GSM data in WAV files. Rafal Maszkowski
  o Allow encoding quality to be specified (works for Ogg too, but not
    MP3).
  o Rename -b to -1, -w to -2, -l to -4, -d to -8, and mask to dither.
    (robs)
  o New options for specifying endianness (and separate options for
    nibble & bit reversal) [FR# 1621702].  (robs)
  o Added large file support.  (Reuben Thomas)
  o Improved multi-channel file reading; fixes [1599990].  (robs)

  Effects:

  o Equalizer effect (Pascal Giard)
  o bass and treble altering effects.  (robs)
  o New optional rabbit resample routine, using libsamplerate
    (aka Secret Rabbit Code).  (Reuben Thomas)
  o Added allpass filter effect.  (robs)
  o Documented the butterworth filter effects; added variable Q.  (robs)
  o "rate" effect made an alias for "resample".
  o Visualisation of various filters' frequency response via Octave.  (robs)
  o Can now specify width of many 2nd-order filters as: Hz, octaves,
    or Q.  (robs)
  o Dither/mask amount now specifiable.  (robs)
  o Consistent (and hopefully complete) clipping detection and
    reporting.  (robs)
  o Allow command-line time parameters of < 1 sec to omit the
    leading 0. (robs)
  o Improved synth usage and improved the synth entry in the man-
    page.  (robs)
  o Higher quality audio speed adjustment; also fixes [1155364].  (robs)
  o Replacement flanger effect; also fixes [1393245].  (robs)
  o Added silence padding effect.  (robs)
  o Added ability to merge e.g. 2 mono files to 1 stereo file
    [FR# 1297076].  (robs)

  Other new features:

  o Added Lua scripting, allowing effects and format to be implemented